improve start transfer e2e tests
